--- a/2013/dais/nbproject/private/private.properties
+++ b/2013/dais/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish/domains/
 j2ee.server.home=/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish
 j2ee.server.instance=[/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish:/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
 j2ee.server.middleware=/home/local/tmp/smid/src/glassfish-4.0nb80
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/users/smid/.netbeans/8.0.dais/build.properties
