--- a/2013/dais/nbproject/private/private.properties
+++ b/2013/dais/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=/home/users/smid/.netbeans/8.0.dais/config/GlassFishEE6/Properties/gfv3-323735939.properties
+deploy.ant.properties.file=/home/users/smid/.netbeans/8.0.dais/config/GlassFishEE6/Properties/gfv3354615889.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish/domains/domain1
-j2ee.server.home=/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish
-j2ee.server.instance=[/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish:/home/local/tmp/smid/src/glassfish-4.0nb80/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=/home/local/tmp/smid/src/glassfish-4.0nb80
+j2ee.server.domain=/home/local/tmp/smid/src/glassfish-4.0/glassfish/domains/domain1
+j2ee.server.home=/home/local/tmp/smid/src/glassfish-4.0/glassfish
+j2ee.server.instance=[/home/local/tmp/smid/src/glassfish-4.0/glassfish:/home/local/tmp/smid/src/glassfish-4.0/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/home/local/tmp/smid/src/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
